--- a/views/Atualizar.handlebars
+++ b/views/Atualizar.handlebars
@@ -41,7 +41,7 @@
                 <select name="" id="" class="form-select">
                     <option selected>Celular</option>
                     <option>Telefone</option>
-                    <option>Batata Gamer</option>
+                    <option>Geladeira</option>
                     <option>Calculadora</option>
                 </select>
             </div>
