--- a/views/Consultar.handlebars
+++ b/views/Consultar.handlebars
@@ -1,5 +1,5 @@
 <div class="container text-center">
-    <div class="row text-center">git
+    <div class="row text-center">
         <nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary text-light">
             <div class="container-fluid">
                 <a class="navbar-brand text-light" href="/">SISTEMA WEB</a>
